# usaco

./: CMakeLists.txt  README.md
UCF/: BB.cpp  C.cpp  dictionary.cpp  hanukkah.cpp  room.cpp  slices.cpp  slime.cpp
astar/goldb/bds/: bds.cpp
astar/goldb/bestspot/: bestspot.cpp
astar/goldb/cgiving/: cgiving.cpp
astar/goldb/contest/: contest.cpp
astar/goldb/cowroute/: cowroute.cpp
astar/goldb/dijkstra2/: dijkstra2.cpp
astar/goldb/flow/: flow.cpp
astar/goldb/hideseek/: hideseek.cpp
astar/goldb/mst2/: mst2.cpp
astar/goldb/packdel/: packdel.cpp
astar/goldb/picnic/: picnic.cpp
astar/plat/articulation/: articulation.cpp
astar/plat/balloc/: balloc.cpp
astar/plat/convexhulltrick/: convex.cpp
astar/plat/cowrun2/: cowrun2.cpp
astar/plat/cpattern/: cpattern.cpp
astar/plat/damage/: damage.cpp
astar/plat/expand/: expand.cpp  expand1.cpp
astar/plat/fence/: fence.cpp
astar/plat/fence6/: fence6.cpp
astar/plat/first/: .first.cpp.swo  .first.cpp.swp  first.cpp
astar/plat/gangs/: gangs.cpp
astar/plat/gourmet/: gourmet.cpp
astar/plat/island2/: island2.cpp
astar/plat/letter/: letter.cpp
astar/plat/lilypad/: lilypad.cpp
astar/plat/lineup2/: lineup2.cpp
astar/plat/lites/: lites.cpp
astar/plat/mixup2/: mixup2.cpp
astar/plat/mou/: mou.cpp
astar/plat/msched/: msched.cpp
astar/plat/nearcows/: nearcows.cpp
astar/plat/newbarn/: newbarn.cpp
astar/plat/patterns/: patterns.cpp
astar/plat/photo/: photo.cpp
astar/turing/: .findbessie.cpp.swp  bessieball.cpp  buckets.cpp  construction.cpp  cowdance.cpp  cowdance2.cpp  findbessie.cpp
cf/: :  actg.cpp  antimatter.cpp  arithprog.cpp  arrayrestore.cpp  asyaarray.cpp  asyakittens.cpp  badxor.cpp  beagraph.cpp  birds.cpp  blackboard.cpp  breakdoor.cpp  buylunch.cpp  circularrmq.cpp  coffeecourse.cpp  costree.cpp  coverp.cpp  createsnap.cpp  date.cpp  destorycol.cpp  draw.cpp  elongmat.cpp  fairnut.cpp  imbarr.cpp  importantfiles.cpp  invexp.cpp  karensupermarket.cpp  kcolor.cpp  knighttournament.cpp  kquery.cpp  manhole.cpp  matrice.cpp  maxmedian.cpp  mintriangle.cpp  monore.cpp  mstuni.cpp  nastyabook.cpp  nastyalegend.cpp  palindromeless.cpp  presuf.cpp  (+15 more)
cmimc2020/sample/: ai.py
codejam2019/qual/: foregone.cpp  ownway.cpp
codejam2019/round1a/: alien.cpp  gopher.cpp  pylon2.cpp  pylons.cpp  pylontester.cpp
codejam2019/round2/: newelements1.cpp  newelements2.cpp  pottery.cpp
codejam2020/: bullseye.cpp  expogo.cpp  joinrank.cpp  nestingdepth.cpp  overexcited.cpp  overrandom.cpp  oversized.cpp  oversized2.cpp  pancakes.cpp  pascalwalk.cpp  patternmatching.cpp  ppr.cpp  security.cpp  squaredance.cpp  vestigium.cpp  walktest.cpp  wormhole.cpp
codequest/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  F.in  G.cpp  H.cpp  L.cpp
contests/: cave.cpp  falling.cpp  nondec.cpp  pieaters.cpp  snowcow.cpp  treeboxes.cpp  treedepth.cpp  treedepth2.cpp  valleys.cpp  valleys.in
contests/art2/: art2.cpp  art2.in
contests/balance/: balance.cpp  balance.in
contests/barnpainting/: barnpainting.cpp
contests/checklist/: checklist.cpp
contests/cownav/: cownav.cpp
contests/cownomics/: cownomics.cpp
contests/cowpatibility/: cowpatibility.cpp
contests/dining/: dining.cpp  dining.in
contests/feb19_plat/: cowdate.cpp  mooriokart.cpp  mooriokart.in  mooriokart2.cpp  mowing.cpp  mowing.in
contests/greedy/: greedy.cpp
contests/moocast/: moocast.cpp  moocast.in
contests/piepie/: piepie.cpp
contests/poetry/: poetry.cpp  poetry.in
contests/redistricting/: redistricting.cpp  redistricting.in  redistricting2.cpp  redistricting3.cpp  redistricting4.cpp
contests/sleepy/: sleepy.cpp
contests/slingshot/: slingshot.cpp
contests/sprinklers2/: sprinklers2.cpp
contests/talent/: talent.cpp
contests/teamwork/: teamwork.cpp
contests/tracking2/: tracking2.cpp
fbhc2020/qual/: A.cpp  A.in  B.cpp  B.in
hpi2019/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  L.cpp  a  template.cpp
misc/: Matrix.h  getrekt.cpp  lenstra.cpp  p+1.cpp  p-1.cpp
newLowerBoundProblems/: p10125.cpp  p10341.cpp  p10827.cpp  p11157.cpp  p11212.cpp  p193.cpp  p256.cpp  p507.cpp  p750.cpp  p836.cpp  p927.cpp
privtutor/silver/: sorting.cpp
proco2021/actual/: C.cpp  G.cpp  I.cpp  K.cpp  L.cpp
proco2021/practice/: assemble.cpp  template.cpp  thor.cpp  whatever.cpp
template/: fastscan.cpp  segtree.cpp
train/: stall4.cpp
train/agrinet/: agrinet.cpp
train/ariprog/: ariprog.cpp
train/barn1/: barn1.cpp
train/butter/: butter.cpp
train/camelot/: camelot.cpp
train/castle/: castle.cpp
train/combo/: combo.cpp
train/comehome/: comehome.cpp
train/concom/: concom.cpp  concom.in
train/contact/: contact.cpp
train/cowtour/: cowtour.cpp
train/crypt1/: crypt1.cpp
train/dualpal/: dualpal.cpp
train/fact4/: fact4.cpp
train/fence/: fence.cpp  fence.in
train/fence9/: fence9.cpp
train/frac1/: frac1.cpp
train/fracdec/: fracdec.cpp  fracdec.in
train/game1/: game1.cpp
train/hamming/: .hamming.cpp.swp  hamming.cpp  hamming.in
train/heritage/: heritage.cpp
train/holstein/: holstein.cpp
train/humble/: humble.cpp  humble2.cpp
train/inflate/: inflate.cpp
train/kimbits/: kimbits.cpp
train/lamps/: lamps.cpp
train/maze1/: maze1.cpp
train/milk/: milk.cpp
train/milk3/: milk3.cpp
train/money/: money.cpp
train/msquare/: msquare.cpp
train/namenum/: namenum.cpp
train/nocows/: nocows.cpp
train/nuggets/: nugget.cpp
train/numtri/: numtri.cpp
train/palsquare/: palsquare.cpp
train/pharmacy/: pharmacy.cpp
train/pprime/: pprime.cpp
train/preface/: preface.cpp
train/prefix/: prefix.cpp
train/range/: range.cpp
train/ratios/: ratios.cpp  ratios.in  ratios2.cpp
train/rockers/: rockers.cpp
train/runround/: runround.cpp
train/shopping/: shopping.cpp
train/skidesign/: skidesign.cpp
train/sort3/: sort3.cpp
train/spin/: spin.cpp
train/sprime/: sprime.cpp
train/stamps/: stamps.cpp
train/subset/: subset.cpp
train/transform/: transform.cpp  transform.in
train/ttwo/: ttwo.cpp
train/wormhole/: wormhole.cpp
train/zerosum/: zerosum.cpp
(+56 files in other folders)
